syntax = "proto2";

package opentxs.proto;
option optimize_for = LITE_RUNTIME;

import public "Enums.proto";
import public "KeyCredential.proto";
import public "Signature.proto";

message Credential {
    optional uint32 version = 1;
    optional string id = 2;
    optional CredentialType type = 3;
    optional CredentialRole role = 4;
    optional KeyMode mode = 5;
    optional string nymID = 6;
    oneof publicData {
        KeyCredential publicCredential = 7;
    }
    oneof privateData {
        KeyCredential privateCredential = 8;
    }
    repeated Signature signature = 9;
}
