syntax = "proto2";

package opentxs.proto;
option optimize_for = CODE_SIZE;

import public "Enums.proto";
import public "AsymmetricKey.proto";
import public "ChildCredentialParameters.proto";
import public "MasterCredentialParameters.proto";

message KeyCredential {
    optional uint32 version = 1;
    optional KeyMode mode = 2;
    repeated AsymmetricKey key = 3;
    oneof parameters {
        ChildCredentialParameters childData = 4;
        MasterCredentialParameters masterData = 5;
    }
}
